moved over most of the implementation

--- a/package.json
+++ b/package.json
@@ -6,21 +6,48 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@ethereum-attestation-service/eas-sdk": "^2.3.0",
+    "@headlessui/react": "^2.1.0",
+    "@heroicons/react": "^2.1.4",
+    "@sindresorhus/slugify": "^2.2.1",
+    "@tanstack/react-query": "^5.36.0",
+    "@tanstack/react-query-devtools": "^5.47.0",
+    "@trpc/client": "^11.0.0-rc.370",
+    "@trpc/next": "^11.0.0-rc.370",
+    "@trpc/react-query": "^11.0.0-rc.370",
+    "@trpc/server": "^11.0.0-rc.370",
+    "@vercel/postgres": "^0.9.0",
+    "@web3modal/wagmi": "^4.2.3",
+    "boring-avatars": "^1.10.2",
+    "dlv": "^1.1.3",
+    "drizzle-orm": "^0.31.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "next": "14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
+    "superjson": "^2.2.1",
+    "viem": "^2.16.2",
+    "wagmi": "^2.10.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "4.2.5",
+    "@types/dlv": "^1.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.22.7",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
