--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "importApps": "tsx src/scripts/importApps.ts",
+    "importDebank": "tsx src/scripts/importDebank.ts"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
@@ -33,6 +35,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "superjson": "^2.2.1",
+    "tsx": "^4.15.7",
     "viem": "^2.16.2",
     "wagmi": "^2.10.6"
   },
@@ -46,6 +49,7 @@
     "drizzle-kit": "^0.22.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
