--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "boring-avatars": "^1.10.2",
     "dlv": "^1.1.3",
     "drizzle-orm": "^0.31.2",
+    "frames.js": "^0.14.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.2.4",
