--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "superjson": "^2.2.1",
     "tsx": "^4.15.7",
     "viem": "^2.16.2",
