--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@radix-ui/react-toast": "^1.2.1",
     "@sindresorhus/slugify": "^2.2.1",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.47.0",
@@ -26,11 +27,14 @@
     "@vercel/postgres": "^0.9.0",
     "@web3modal/wagmi": "^5.0.11",
     "boring-avatars": "^1.10.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dlv": "^1.1.3",
     "drizzle-orm": "^0.31.2",
     "frames.js": "^0.14.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "lucide-react": "^0.427.0",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
@@ -38,6 +42,8 @@
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.15.7",
     "viem": "^2.19.2",
     "wagmi": "^2.12.2"
