--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "codegen": "graphql-codegen --config codegen.ts",
     "importApps": "tsx src/scripts/importApps.ts",
     "exportApps": "tsx src/scripts/exportApps.ts",
-    "importDebank": "tsx src/scripts/importDebank.ts"
+    "importDebank": "tsx src/scripts/importDebank.ts",
+    "updateScores": "tsx src/scripts/updateScores.ts"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-toast": "^1.2.1",
     "@sindresorhus/slugify": "^2.2.1",
     "@tanstack/react-query": "^5.36.0",
