--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql-request": "^6.1.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.4",
+    "nuqs": "^1.19.3",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
